// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Cart /> tests should apply correct rule 1`] = `
<table
  class="table table-sm table-striped"
>
  <thead>
    <tr>
      <th>
        Title
      </th>
      <th>
        Qty
      </th>
      <th />
      <th>
        Price
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        Face Mask
      </td>
      <td>
        x 
        2
      </td>
      <td>
        <button
          class="btn btn-primary btn-sm"
          type="button"
        >
          Remove
        </button>
      </td>
      <td>
        4
      </td>
    </tr>
    <tr>
      <td
        class="bold"
      >
        Sub-total:
      </td>
      <td />
      <td />
      <td>
        5
      </td>
    </tr>
    <tr>
      <td
        class="bold"
      >
        Savings
      </td>
      <td />
      <td />
      <td />
    </tr>
    <tr>
      <td>
        Face Masks 2 for £4
      </td>
      <td />
      <td />
      <td>
        -
        1
      </td>
    </tr>
    <tr>
      <td
        class="bold"
      >
        Total Savings:
      </td>
      <td />
      <td />
      <td>
        -1
      </td>
    </tr>
    <tr>
      <td
        class="bold"
      >
        Total to Pay:
      </td>
      <td />
      <td />
      <td>
        4
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`<Cart /> tests should render CartList with correct props 1`] = `
<table
  class="table table-sm table-striped"
>
  <thead>
    <tr>
      <th>
        Title
      </th>
      <th>
        Qty
      </th>
      <th />
      <th>
        Price
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        Face Mask
      </td>
      <td>
        x 
        2
      </td>
      <td>
        <button
          class="btn btn-primary btn-sm"
          type="button"
        >
          Remove
        </button>
      </td>
      <td>
        4
      </td>
    </tr>
    <tr>
      <td>
        Toilet Paper
      </td>
      <td>
        x 
        2
      </td>
      <td>
        <button
          class="btn btn-primary btn-sm"
          type="button"
        >
          Remove
        </button>
      </td>
      <td>
        1.3
      </td>
    </tr>
    <tr>
      <td
        class="bold"
      >
        Sub-total:
      </td>
      <td />
      <td />
      <td>
        6.3
      </td>
    </tr>
    <tr>
      <td
        class="bold"
      >
        Savings
      </td>
      <td />
      <td />
      <td />
    </tr>
    <tr>
      <td>
        Face Masks 2 for £4
      </td>
      <td />
      <td />
      <td>
        -
        1
      </td>
    </tr>
    <tr>
      <td
        class="bold"
      >
        Total Savings:
      </td>
      <td />
      <td />
      <td>
        -1
      </td>
    </tr>
    <tr>
      <td
        class="bold"
      >
        Total to Pay:
      </td>
      <td />
      <td />
      <td>
        5.3
      </td>
    </tr>
  </tbody>
</table>
`;
